Center aligns the bubbles in tab 1. Bug fix to ensure that an event end time <= the grid end time. Adds code for refreshing the grid

--- a/public/css/meetings.css
+++ b/public/css/meetings.css
@@ -397,6 +397,7 @@
     text-align: left;
     padding: 2px;
     padding-bottom: 0;
+    text-align: center;
 }
 
 #br .c-row:hover, #br .c-row:focus {
@@ -459,6 +460,7 @@
     position: relative;
     width: 100%;
     padding-right: 10px;
+    padding-left: 10px;
     display: none;
     top: 2px;
 }
